site/styles/_meta-detail.scss
/* ... */
// Meta Detail Bonus Content
.meta-detail-bonus-content,
.meta-detail-episodes-content {
  padding: 0;
  // border-top: 1px solid rgba(255,255,255,0.2);
  padding-top: 20px;
  h4 {
    font-size: 14px;
    font-weight: 700;
    align-self: stretch;
  }
  .list {
    @extend .d-flex;
    flex-direction: column;
    .bonus-item,
    .episode-item {
      padding-top: $grid-gutter-width / 2;
      padding-bottom: $grid-gutter-width / 2;
      .bonus,
      .episode {
        @extend .d-flex;
        flex-direction: row;
        .poster {
          width: 118px;
          flex-shrink: 0;
          @include media-breakpoint-up(md) {
            width: 158px;
          }
          .s72-btn-play {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translateX(-50%) translateY(-50%);
            z-index: 2;
            padding-right: 3px;
            padding-left: 3px;
            .verb {
              display: none;
            }
          }
        }
        .caption {
          padding: 5px 10px;
          @include media-breakpoint-up(md) {
            padding: 10px $grid-gutter-width / 2;
          }
          h5 {
            font-size: 12px;
            font-weight: 700;
            @include media-breakpoint-up(md) {
              font-size: 12px;
            }
          }
          .runtime {
            font-size: 8px;
            color: rgba(255,255,255,0.5);
            @include media-breakpoint-up(md) {
              font-size: 10px;
            }
            @include media-breakpoint-up(lg) {
              font-size: 12px;
            }
          }
          .synopsis {
            p {
              font-size: 10px;
              line-height: 12px;
              color: rgba(255,255,255,0.5);
              @include media-breakpoint-up(lg) {
                font-size: 12px;
              }
            }
          }
        }
      }
    }
  }
}
// Recommendations
.recommendations-collection {
  padding-top: 20px;
  @include media-breakpoint-up(md) {
    padding-top: 0;
  }
  @include media-breakpoint-up(lg) {
    padding-top: 20px;
  }
  @include media-breakpoint-up(xl) {
    padding-top: 80px;
  }
}
// Bundle Meta Detail
.meta-detail-bundle {
  // Meta Detail Background
  .meta-detail-bg {
    opacity: .4;
    &:before {
      display: none;
    }
    &:after {
      position: absolute;
      width: 100%;
      bottom: 0;
      left: 0;
      @include gradient-y(rgba($body-bg,0), $body-bg, 0%, 100%);
    }
    s72-image {
      &:before {
        content: '';
        width: 30%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        z-index: 8;
        @include gradient-x( rgba($body-bg, 1), transparent, 0%, 100%);
      }
      &:after {
        content: '';
        width: 30%;
        height: 100%;
        position: absolute;
        top: 0;
        right: 0;
        bottom: 0;
        z-index: 8;
        @include gradient-x( transparent, rgba($body-bg, 1), 0%, 100%);
      }
    }
  }
  // Meta Detail Main
  .meta-detail-main {
    flex-direction: column;
    padding-top: $page-detail-padding-top;
    @include media-breakpoint-up(lg){
      padding-top: $page-detail-padding-top-md;
    }
  }
  // Meta Detail Content
  .meta-detail-content {
    margin: 0 auto;
    width: 100%;
    max-width: 557px;
    @include media-breakpoint-up(lg){
      width: 657px;
      max-width: 100%;
    }
    @include media-breakpoint-up(xl){
      width: 773px;
      max-width: 100%;
    }
    h1, p,
    .meta-item-tagline,
    .meta-detail-buttons {
      text-align: center;
    }
    .meta-detail-synopsis {
      font-size: 12px;
      text-align: center;
      margin-bottom: $grid-gutter-width / 2;
      padding-top: 0;
      @include media-breakpoint-up(lg){
        font-size: 14px;
      }
      @include media-breakpoint-up(xl){
        font-size: 16px;
      }
      p {
        animation: fadein 2s;
        -moz-animation: fadein 2s; /* Firefox */
        -webkit-animation: fadein 2s; /* Safari and Chrome */
        -o-animation: fadein 2s; /* Opera */
      }
    }
  }
  // Meta Detail Extras
  .meta-detail-extras {
    @extend .d-flex;
    justify-content: center;
    padding-top: $grid-gutter-width / 2;
  }
  // Meta Default Bundle Items
  .meta-detail-bundle-items {
    margin-top: $grid-gutter-width / 2;
    h4 {
      font-size: 18px;
      text-align: center;
    }
    .list {
      max-width: 567px;
      @extend .d-flex;
      justify-content: center;
      margin: 0 auto;
      @include media-breakpoint-up(lg){
        max-width: 767px;
      }
      @include media-breakpoint-up(xl){
        max-width: 1440px;
      }
      .slider-item {
        width: 33.3333333333333333%;
        float: none;
        padding-right: 5px;
        padding-left: 5px;
        @include media-breakpoint-up(lg){
          width: 16.6666666667%;
        }
        .poster {
          width: 100%;
        }
        .hover {
          // @include hover-focus {
          //   border: 2px solid $primary;
          // }
          .buttons {
            .s72-btn {
              display: none !important;
            }
          }

        }
      }
    }
  }
}

.meta-detail-episodes-content,
.meta-detail-bonus-content {
    .poster .s72-btn-play {
        padding-right: 3px;
    }
}

.meta-detail-bonus-content .synopsis {
    font-size: 10px;    
    @include media-breakpoint-up(lg) {
        font-size: 12px;
    }
}

